@@ -1,5 +1,11 @@
 2002-08-28  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
 
+	* [w3m-dev 03291] parsetagx.c:toNumber()
+	* parsetagx.c (toNumber): don't parse non-number value as 0, 
+	                            just ignore
+
+2002-08-28  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
+
 	* [w3m-dev 03290] Re: Forward: Bug#157098: wrong file presentation on large files
 	* indep.c (strtoclen): need defined()
 
